Inserting Angular Project SPA

--- a/ProAgil-App/src/app/app.component.html
+++ b/ProAgil-App/src/app/app.component.html
@@ -1,5 +1,5 @@
-
-    <span>{{ title }} app is running!</span>
-
-<app-Event></app-Event>
+<div class="container">
+  <span>{{ title }} app is running!</span>
+  <app-Event></app-Event>
+</div>
 <router-outlet></router-outlet>
