--- a/ProAgil-App/src/app/Event/Event.component.html
+++ b/ProAgil-App/src/app/Event/Event.component.html
@@ -1,6 +1,8 @@
 <div *ngFor="let event of events">
-  Name: {{event.eventName}}
+  Name: {{event.name}}
   <br>
-  Local: {{event.eventLocal}}
+  Local: {{event.local}}
+  <br>
+  Data: {{event.date | date:'dd/MM/yyyy'}}
 <hr>
 </div>  
